--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
 	
 	<div class="console">
-	    
+	    <div class="video-container">
+	        <video src="BadDecisions.mp4" controls></video>
+<!--<iframe src="https://youtu.be/V54GX6o5Soo"-->
+<!--  allowfullscreen="allowfullscreen" width="781" height="440"-->
+<!--  frameborder="0">-->
+<!--</iframe>  -->
+</div>
+
 	    
 	</div>
 	
