--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		
 		
  	<div class="aspect-ratio">
-    <embed src="BadDecisions.mp4" height="315" width="560" frameBorder="0">
+    <embed src="BadDecisions.mp4" height="315" width="560" webkit-playsinline webkit-playsinline="true" playsinline="true"frameBorder="0">
 <embed>
     </div>
 
