--- a/index.html
+++ b/index.html
@@ -63,18 +63,10 @@
     <img src="vaporsilk.gif" width="900px" height="700px" alt="ninth image" >
     <img src="cloudmove.gif" width="900px" height="700px" alt="tenth image">
     <img src="bluemountains.gif" width="900px" height="700px" alt="eleventh image">
-    <img src="waterfall12.gif" width="900px" height="700px" alt="twelfth image">
+    <img src="rainbow.gif" width="900px" height="700px" alt="twelfth image">
     <img src="lushmountain.gif" width="100%" height="100%" alt="thirteenth image">
     <img src="palm.gif" width="900px" height="700px" alt="fourteenth image">
     <img src="icymountain.gif" width="900px" height="700px" alt="fifteenth image">
-    <img src="waterfall15.gif" width="900px" height="700px" alt="sixteenth image">
-    <img src="waterfall5.gif" width="900px" height="700px" alt="seventeenth image">
-    <img src="waterfall18.gif" width="900px" height="700px" alt="eighteenth image">
-    <img src="waterfall19.gif" width="900px" height="700px" alt="nineteenth image">
-    <img src="waterfall22.gif" width="900px" height="700px" alt="twentieth image">
-    <img src="waterfall23.gif" width="900px" height="700px" alt="twentyfirst image">
-    <img src="waterfall24.gif" width="900px" height="700px" alt="twentysecond image">
-    <img src="waterfall25.gif" width="900px" height="700px" alt="twentythird image">
       
 </div>  
 
